--- a/package.json
+++ b/package.json
@@ -33,7 +33,12 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@types/jest": "^26.0.7",
+    "@types/node": "^14.0.26",
+    "@types/react": "^16.9.43",
+    "@types/react-dom": "^16.9.8",
     "react-test-renderer": "^16.8.6",
-    "redux-mock-store": "^1.5.3"
+    "redux-mock-store": "^1.5.3",
+    "typescript": "^3.9.7"
   }
 }
